--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,24 @@
+<!--
+
+ =========================================================
+ * JWHer Tech Blog
+ =========================================================
+
+ * Github Page: https://github.com/JWHer/jwher.github.io
+ * Copyright 2022 JWHer
+
+ =========================================================
+
+ * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+-->
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>JwherTech</title>
+  <title>Jwher Tech Blog</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="favicon.svg">
 </head>
 <body>
   <app-root></app-root>
