--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jwher Tech Blog</title>
+  <title>JWHer Tech Blog</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.svg">
